[ja1616] Fixed alignment of feedback available

--- a/backend_js/public/shared/level_selection.css
+++ b/backend_js/public/shared/level_selection.css
@@ -105,7 +105,8 @@
 
 .feedbackImage {
   height: 20px;
-  margin-left: 10px;
+  margin-left: 20px;
+  vertical-align: middle;
 }
 
 .feedbackText {
